--- a/src/styles/_plans.scss
+++ b/src/styles/_plans.scss
@@ -5,10 +5,19 @@
         text-align: center;
     }
 
+
     &__list{
         display: flex;
         justify-content: space-around;
         margin-top: 50px;
+
+        @media (max-width: 768px) {
+            display: block;
+        }
+
+        .button{
+            margin-top: 24px;
+        }
         
         &__item{
             text-align: center;
